--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
     environment:
       - PORT=3000
       - MONGO_URL=mongodb://mongo_api:27017/api_db
+      - AUTH_URL=http://auth:3002
     volumes:
       - ./api/src:/app/src
     depends_on:
