--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,13 +4,13 @@ services:
     container_name: 'realworld_frontend'
     command: npm run dev
     restart: always
-    # ports:
-      # - 3000:3000
     volumes:
       - ./frontend/src:/app/src
     depends_on:
       - auth
       - api
+    networks:
+      - realworld-network
 
   api:
     build: ./api
@@ -22,11 +22,13 @@ services:
     environment:
       - PORT=3000
       - MONGO_URL=mongodb://mongo_api:27017/api_db
-      - AUTH_URL=http://auth:3002
+      - AUTH_URL=http://auth:3000
     volumes:
       - ./api/src:/app/src
     depends_on:
       - mongo_api
+    networks:
+      - realworld-network
 
   mongo_api:
     image: mongo:latest
@@ -36,6 +38,8 @@ services:
       - 27017:27017
     volumes:
       - mongo_api_db:/data/db
+    networks:
+      - realworld-network
 
   auth:
     build: ./auth
@@ -47,10 +51,13 @@ services:
     environment:
       - PORT=3000
       - MONGO_URL=mongodb://mongo_auth:27017/auth_db
+      - API_URL=http://api:3000
     volumes:
       - ./auth/src/:/app/src
     depends_on:
       - mongo_auth
+    networks:
+      - realworld-network
   
   mongo_auth:
     image: mongo:latest
@@ -60,6 +67,8 @@ services:
       - 27018:27017
     volumes:
       - mongo_auth_db:/data/db
+    networks:
+      - realworld-network
 
   nginx:
     image: nginx:stable-alpine
@@ -70,9 +79,16 @@ services:
       - ./nginx/nginx.conf.prod:/etc/nginx/conf.d/nginx.conf
     depends_on:
       - frontend
+    networks:
+      - realworld-network
 
 volumes:
   mongo_api_db:
     name: 'realworld_mongo_api_db'
   mongo_auth_db:
     name: 'realworld_mongo_auth_db'
+
+networks:
+  realworld-network:
+    driver: bridge
+    name: 'realworld-network'
