--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,13 +4,13 @@ services:
     container_name: 'realworld_frontend'
     command: npm run dev
     restart: always
+    ports:
+      - 3000:3000
     volumes:
       - ./frontend/src:/app/src
     depends_on:
       - auth
       - api
-    networks:
-      - realworld-network
 
   api:
     build: ./api
@@ -22,13 +22,11 @@ services:
     environment:
       - PORT=3000
       - MONGO_URL=mongodb://mongo_api:27017/api_db
-      - AUTH_URL=http://auth:3000
+      - AUTH_URL=http://auth:3000/auth
     volumes:
       - ./api/src:/app/src
     depends_on:
       - mongo_api
-    networks:
-      - realworld-network
 
   mongo_api:
     image: mongo:latest
@@ -38,8 +36,6 @@ services:
       - 27017:27017
     volumes:
       - mongo_api_db:/data/db
-    networks:
-      - realworld-network
 
   auth:
     build: ./auth
@@ -51,14 +47,12 @@ services:
     environment:
       - PORT=3000
       - MONGO_URL=mongodb://mongo_auth:27017/auth_db
-      - API_URL=http://api:3000
+      - API_URL=http://api:3000/api
     volumes:
       - ./auth/src/:/app/src
     depends_on:
       - mongo_auth
-    networks:
-      - realworld-network
-  
+
   mongo_auth:
     image: mongo:latest
     container_name: 'realworld_mongo_auth'
@@ -67,8 +61,6 @@ services:
       - 27018:27017
     volumes:
       - mongo_auth_db:/data/db
-    networks:
-      - realworld-network
 
   nginx:
     image: nginx:stable-alpine
@@ -79,8 +71,8 @@ services:
       - ./nginx/nginx.conf.prod:/etc/nginx/conf.d/nginx.conf
     depends_on:
       - frontend
-    networks:
-      - realworld-network
+      - auth
+      - api
 
 volumes:
   mongo_api_db:
@@ -89,6 +81,6 @@ volumes:
     name: 'realworld_mongo_auth_db'
 
 networks:
-  realworld-network:
-    driver: bridge
-    name: 'realworld-network'
+  default:
+    external: true
+    name: realworld-network
