--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 services:
   frontend:
-    build: ./frontend
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
     container_name: 'realworld_frontend'
     command: npm run dev
     restart: always
-    ports:
-      - 3000:3000
     volumes:
       - ./frontend/src:/app/src
     depends_on:
@@ -13,12 +13,12 @@ services:
       - api
 
   api:
-    build: ./api
+    build:
+      context: ./api
+      dockerfile: Dockerfile
     container_name: 'realworld_api'
     command: npm run start
     restart: always
-    ports:
-      - 3001:3000
     environment:
       - PORT=3000
       - MONGO_URL=mongodb://mongo_api:27017/api_db
@@ -32,18 +32,16 @@ services:
     image: mongo:latest
     container_name: 'realworld_mongo_api'
     restart: always
-    ports:
-      - 27017:27017
     volumes:
       - mongo_api_db:/data/db
 
   auth:
-    build: ./auth
+    build:
+      context: ./auth
+      dockerfile: Dockerfile
     container_name: 'realworld_auth'
     command: npm run start
     restart: always
-    ports:
-      - 3002:3000
     environment:
       - PORT=3000
       - MONGO_URL=mongodb://mongo_auth:27017/auth_db
@@ -57,8 +55,6 @@ services:
     image: mongo:latest
     container_name: 'realworld_mongo_auth'
     restart: always
-    ports:
-      - 27018:27017
     volumes:
       - mongo_auth_db:/data/db
 
@@ -68,7 +64,7 @@ services:
     ports:
       - 80:80
     volumes:
-      - ./nginx/nginx.conf.prod:/etc/nginx/conf.d/nginx.conf
+      - ./nginx/nginx.conf.dev:/etc/nginx/conf.d/nginx.conf
     depends_on:
       - frontend
       - auth
